# ArdhaRAG

./: .dockerignore  .env.example  .env.prod.example  .env.staging.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  branch_strategy_completion.sh  community_standards.sh  deploy.sh  dev-environment-complete-fix-v7.sh  dev-workflow-setup-v1.sh  docker-compose.prod.yml  docker-compose.staging.yml  enhanced_cicd.sh  execute_migration.sh  migration_setup.sh  production_docker.sh  pyproject.toml  pyproject.toml.backup  rollback_migration.sh  setup-github-actions.sh  setup_branch_protection.sh  setup_ssl.sh  smart_migration.sh  structure_analysis.sh  structure_comparison_report.md  validate_structure.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: branch-deployments.yml  ci.yml  dependencies.yml  docker-build.yml  health-check.yml  performance.yml  release.yml
ardharag/: __init__.py
ardharag/api/: __init__.py
ardharag/core/: __init__.py
ardharag/ui/: __init__.py
ardharag/utils/: __init__.py
docker/: Dockerfile.dev  docker-compose.dev.yml
docs/development/: branch-protection.md  workflow.md
examples/quickstart/: basic_usage.py
infrastructure/docker/: docker-compose.yml  docker-compose.yml.backup
infrastructure/docker/postgres/: 01-init-age.sql  postgresql.conf
infrastructure/docker/qdrant/: production.yaml
infrastructure/docker/redis/: redis.conf
nginx/: nginx.prod.conf
scripts/: dev-environment.sh
src/ardharag/: __init__.py
src/ardharag/agents/: __init__.py
src/ardharag/api/: __init__.py
src/ardharag/cape/: __init__.py
src/ardharag/core/: __init__.py
src/ardharag/ingestion/: __init__.py
src/ardharag/knowledge/: __init__.py
src/ardharag/llm/: __init__.py
src/ardharag/storage/: __init__.py
src/ardharag/ui/: __init__.py
src/ardharag/utils/: __init__.py
tests/: conftest.py
